force-app/main/default/objects/Feedback__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Noida Sector 16</fullName>
            </value>
            <value>
                <fullName>Sector 63, Noida</fullName>
            </value>
            <value>
                <fullName>Pitampura</fullName>
            </value>
            <value>
                <fullName>South Ex.</fullName>
            </value>
            <value>
                <fullName>Ghaziabad</fullName>
            </value>
            <value>
                <fullName>Gurugram</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>