force-app/main/default/objects/Feedback__c/fields/Feedback_For__c.field-meta.xml
<CustomField>
    <fullName>Feedback_For__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feedback For</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>