force-app/main/default/objects/Feedback__c/fields/Gieven_By__c.field-meta.xml
<CustomField>
    <fullName>Gieven_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Given By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Feedbacks</relationshipLabel>
    <relationshipName>Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>